fix: spacing

--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -141,7 +141,7 @@ section {
   padding: 0.65em;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16);
   background-color: rgb(69, 73, 80);
-  margin: 1em 0;
+  margin: 0.5em 0;
   overflow: auto;
 }
 
